netcfg (0.30) UNRELEASED; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis
    - Udate Dutch translation (nl.po)

 -- Bart Cornelis <cobaco@linux.be>  Sat,  8 Nov 2003 03:43:54 +0100

netcfg (0.29) unstable; urgency=low

  * Joey Hess
    - Temporary fix to refer to correct menu item title for ethdetect.
    - Add myself to uploaders.
  * Matt Kraai
    - Pass -e to dhclient so that it exits unsuccessfully if it is unable
      to obtain a lease (closes: #219392).
  * Philippe Batailler
     - Update French translation.
  * Christian Perrier
     - Fix Turkish PO file (closes: #219396).
  * André Luís Lopes
     - Update pt_BR (Brazilian Portuguese) translation.
  * Miroslav Kure
     - Update Czech translation.
  * Tommi Vainikainen
    - Update Finnish translation.

 -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 13:19:11 -0500

netcfg (0.28) unstable; urgency=low

  * André Luís Lopes
    - Updated pt_BR (Brazilian Portuguese) translation.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis
    - Updated dutch translation (nl.po)
    - added lituanian (lt.po) translation from Kestutis Biliunas
  * Tommi Vainikainen
    - Add Finnish (fi.po) translation
  * Miroslav Kure
    - Update Czech translation (cs.po).
  * Petter Reinholdtsen
    - Updated nb.po.
  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Philippe Batailler
    - Update French translation.
  * Joey Hess
    - Change Installer-Menu-Items from 11 to 18 and 20 as part of the
      10-30  renumbering.
  * Safir Secerovic, Amila Akagic
    - Add Bosnian translation (bs.po).

 -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 13:13:34 -0500

netcfg (0.27) unstable; urgency=low

  * Step dhcp progress display to 100% before clearing it.

 -- Joey Hess <joeyh@debian.org>  Fri, 17 Oct 2003 17:22:24 -0400

netcfg (0.26) unstable; urgency=low

  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Alastair McKinstry