@@ -4,6 +4,9 @@ netcfg (0.30) UNRELEASED; urgency=low
     - Update Japanese translation (ja.po)
   * Bart Cornelis
     - Udate Dutch translation (nl.po)
+  * Steinar H. Gunderson
+    - Fix so that netcfg asks debconf for the description for
+    "netcfg/internal-eth" instead of (e.g.) "netcfg/internal-eth0".
 
  -- Bart Cornelis <cobaco@linux.be>  Sat,  8 Nov 2003 03:43:54 +0100
 
